Retain overlapping PII detections
Keep original mentions and combine equal duplicates without removing overlapping matches. Masking covers their combined spans; label replacement continues to reject overlaps.

Tests: the focused run before the fix had 215 failures and one concurrency assertion error. Clean Java 21 and 25 verification now passes all 10,763 PII cases and 19 integration cases, with no test exclusions.